[tool.poetry]
name = "RealValueAI"
version = "0.1.0"
description = ""
authors = ["sergandri <sergandri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.2"
requests = "^2.31.0"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
selenium = "^4.20.0"
webdriver-manager = "^4.0.1"
tqdm = "^4.66.4"
pydantic = "^2.7.1"
pandera = {extras = ["mypy"], version = "^0.19.3"}
pyarrow = "^16.1.0"
polars = "^0.20.26"
stubs = "^1.0.0"
types-requests = "^2.31.0.20240406"
types-beautifulsoup4 = "^4.12.0.20240511"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.10.0"
pytest = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
